Bug 431917 - New theme not applied to new users
Summary: New theme not applied to new users
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.20.5
Platform: Arch Linux Linux
: VHI normal
Target Milestone: ---
Assignee: Janet Blackquill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-22 07:49 UTC by Iyán M. V.
Modified: 2021-01-25 15:45 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21
Sentry Crash Report:


Attachments
screenshots (2.76 MB, application/gzip)
2021-01-22 07:49 UTC, Iyán M. V.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Iyán M. V. 2021-01-22 07:49:09 UTC
Created attachment 135051 [details]
screenshots

SUMMARY

I created a new user to test the beta version with a clean environment and without old configurations and I realized that the new theme is not "loaded" until I go to settings and change to another theme and then go back to Breeze.


STEPS TO REPRODUCE
1. Create a new user
2. Login with that user
3. Check theme (see screenshots dolphin_new_user.png and writer_new_user.png)
4. Go to System Settings -> Appearance
5. Change Global theme to Breeze Dark and then back to Breeze
6. Check again same apps (see screenshots dolphin_new_user_after.png and writer_new_user_after.png)

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.20.90
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Kernel Version: 5.10.9-arch1-1
OS Type: 64-bit
Comment 1 Nate Graham 2021-01-22 15:21:11 UTC
Confirmed. We're working on this.
Comment 2 David Redondo 2021-01-25 13:56:57 UTC
Git commit 9d404df129774922efaa744423597f8af7ca9e32 by David Redondo.
Committed on 25/01/2021 at 13:56.
Pushed by davidre into branch 'master'.

kde4breeze: Breeze Light is the new default

Otherwise this kconf_update binary writes Breeze colors to the users kdeglobals.
I created a new user, added its ~/.config/kdeglobals to auditd and saw that this binary wrote to it.

M  +1    -1    misc/kde4breeze/src/main.cpp

https://invent.kde.org/plasma/breeze/commit/9d404df129774922efaa744423597f8af7ca9e32
Comment 3 David Redondo 2021-01-25 13:57:28 UTC
Git commit f6a9d492115b7d57e9e0de8e9e2e89acccbe8857 by David Redondo.
Committed on 25/01/2021 at 13:57.
Pushed by davidre into branch 'Plasma/5.21'.

kde4breeze: Breeze Light is the new default

Otherwise this kconf_update binary writes Breeze colors to the users kdeglobals.
I created a new user, added its ~/.config/kdeglobals to auditd and saw that this binary wrote to it.


(cherry picked from commit 9d404df129774922efaa744423597f8af7ca9e32)

M  +1    -1    misc/kde4breeze/src/main.cpp

https://invent.kde.org/plasma/breeze/commit/f6a9d492115b7d57e9e0de8e9e2e89acccbe8857