kde4breeze: Breeze Light is the new default

Otherwise this kconf_update binary writes Breeze colors to the users kdeglobals.
I created a new user, added its ~/.config/kdeglobals to auditd and saw that this binary wrote to it.
BUG: 431917